--- a/boutique.html
+++ b/boutique.html
@@ -1,238 +1,192 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Poster MBK – Studio Hikaïa</title>
   <style>
     body {
-      margin: 0;
-      background-color: black;
+      background-color: #000;
+      color: #fff;
       font-family: Arial, sans-serif;
-      color: white;
+      margin: 0;
+      padding: 0;
     }
-
-    .ticker {
-      overflow: hidden;
-      white-space: nowrap;
-      box-sizing: border-box;
-      border-bottom: 1px solid white;
-      font-size: 13px;
-    }
-
-    .ticker span {
-      display: inline-block;
-      padding-left: 100%;
-      animation: scroll 20s linear infinite;
-    }
-
-    @keyframes scroll {
-      0% { transform: translateX(0); }
-      100% { transform: translateX(-100%); }
-    }
-
     header {
-      text-align: center;
-      padding: 20px 0 10px 0;
-    }
-
-    nav {
+      position: relative;
+      padding: 20px 40px;
       display: flex;
-      justify-content: center;
-      gap: 30px;
-      font-size: 14px;
-      margin-bottom: 20px;
+      align-items: center;
+      justify-content: space-between;
     }
-
-    nav a {
-      color: white;
+    .menu {
+      display: flex;
+      gap: 20px;
+    }
+    .menu a {
+      color: #fff;
       text-decoration: none;
       font-weight: bold;
     }
-
+    .logo {
+      width: 40px;
+      height: 40px;
+    }
+    .marquee-container {
+      overflow: hidden;
+      white-space: nowrap;
+      margin: 20px 0;
+    }
+    .marquee-text {
+      display: inline-block;
+      padding-left: 100%;
+      animation: scrollText 15s linear infinite;
+    }
+    @keyframes scrollText {
+      0% { transform: translateX(0); }
+      100% { transform: translateX(-100%); }
+    }
     .container {
       display: flex;
+      flex-wrap: wrap;
+      max-width: 1000px;
+      margin: 0 auto;
+      padding: 40px 20px;
+      gap: 40px;
       justify-content: center;
-      align-items: flex-start;
-      gap: 60px;
-      padding: 40px;
     }
-
     .carousel {
       position: relative;
-      max-width: 400px;
+      width: 400px;
+      height: auto;
     }
-
     .carousel img {
       width: 100%;
-      border-radius: 8px;
+      height: auto;
       display: none;
     }
-
     .carousel img.active {
       display: block;
     }
-
-    .arrows {
-      display: flex;
-      justify-content: space-between;
+    .carousel button {
       position: absolute;
       top: 50%;
-      width: 100%;
       transform: translateY(-50%);
-      pointer-events: none;
-    }
-
-    .arrows button {
       background: none;
       border: none;
       color: white;
-      font-size: 22px;
-      pointer-events: auto;
+      font-size: 30px;
       cursor: pointer;
     }
-
-    .product {
-      max-width: 350px;
+    .carousel .prev {
+      left: -40px;
     }
-
-    .product h1 {
-      font-size: 22px;
-      margin-bottom: 8px;
+    .carousel .next {
+      right: -40px;
     }
-
-    .stock {
-      font-size: 13px;
+    .product-details {
+      max-width: 400px;
+    }
+    .status {
       color: white;
-      margin-bottom: 20px;
-    }
-
-    .stock::before {
-      content: "● ";
-      color: limegreen;
-    }
-
-    .options {
-      margin-bottom: 20px;
-    }
-
-    .label {
-      font-size: 13px;
-      margin-bottom: 6px;
-    }
-
-    .buttons {
       display: flex;
-      gap: 10px;
-      margin-bottom: 15px;
+      align-items: center;
+      gap: 8px;
     }
-
-    .buttons button {
-      padding: 8px 14px;
-      border-radius: 50px;
+    .status-dot {
+      width: 10px;
+      height: 10px;
+      background-color: #0f0;
+      border-radius: 50%;
+    }
+    .options, .size {
+      margin: 10px 0;
+    }
+    .option-btn, .size-btn {
+      padding: 8px 16px;
+      border-radius: 20px;
       border: 1px solid white;
       background: none;
       color: white;
       cursor: pointer;
-      font-size: 13px;
+      margin-right: 10px;
     }
-
-    .buttons button.selected {
+    .option-btn.active, .size-btn.active {
       font-weight: bold;
-      border: 1.5px solid white;
+      border-color: white;
     }
-
-    .buy-button {
-      background: white;
+    .buy-btn {
+      margin-top: 20px;
+      padding: 12px 20px;
+      background-color: white;
       color: black;
       border: none;
-      padding: 10px 25px;
-      border-radius: 6px;
       cursor: pointer;
-      font-size: 14px;
       font-weight: bold;
-      margin: 20px 0;
     }
-
-    .desc {
-      font-size: 13px;
-      line-height: 1.6;
-    }
-
-    .desc ul {
-      margin: 10px 0 0 0;
-      padding: 0;
-      list-style: none;
-    }
-
-    .desc li::before {
-      content: "• ";
+    .note {
+      font-size: 0.9em;
+      margin-top: 20px;
     }
   </style>
 </head>
 <body>
-  <div class="ticker">
-    <span>WHO NEEDS DRUGS WHEN I CAN LOOK AT YOUR EYES ELENA? — WHO NEEDS DRUGS WHEN I CAN LOOK AT YOUR EYES ELENA? — </span>
-  </div>
-
   <header>
-    <img src="logo-chat.png" alt="Logo" height="40" />
-    <nav>
+    <div class="menu">
       <a href="index.html">Portfolio</a>
       <a href="boutique.html">Boutique</a>
       <a href="contact.html">Contact</a>
-    </nav>
+    </div>
+    <img src="logo-chat.png" alt="Logo Hikaïa" class="logo">
   </header>
-
+  <div class="marquee-container">
+    <div class="marquee-text">WHO NEEDS DRUGS WHEN I CAN LOOK AT YOUR EYES ELENA? — WHO NEEDS DRUGS WHEN I CAN LOOK AT YOUR EYES ELENA? — </div>
+  </div>
   <div class="container">
     <div class="carousel">
-      <img src="extra1.jpg" alt="Poster MBK" class="active" />
-      <img src="extra2.jpg" alt="Poster MBK" />
-      <div class="arrows">
-        <button onclick="prevImage()">‹</button>
-        <button onclick="nextImage()">›</button>
-      </div>
+      <img src="poster-mbk.jpg" alt="Poster MBK" class="active">
+      <img src="poster-levres.jpg" alt="Poster Lèvres">
+      <img src="extra1.jpg" alt="Extra 1">
+      <img src="extra2.jpg" alt="Extra 2">
+      <button class="prev" onclick="prevImage()">‹</button>
+      <button class="next" onclick="nextImage()">›</button>
     </div>
-
-    <div class="product">
-      <h1>Poster "MBK"</h1>
-      <div class="stock">Item is in stock</div>
-
-      <div class="options">
-        <div class="label">CHOIX :</div>
-        <div class="buttons">
-          <button class="selected">1</button>
-          <button>2</button>
-        </div>
-
-        <div class="label">TAILLE :</div>
-        <div class="buttons">
-          <button class="selected">40x60cm</button>
-        </div>
+    <div class="product-details">
+      <h2>Poster "MBK"</h2>
+      <div class="status">
+        <div class="status-dot"></div>
+        <span>Item is in stock</span>
       </div>
-
-      <button class="buy-button">Buy now — 25€</button>
-
-      <div class="desc">
-        Poster artistique – édition exclusive signée Studio Hikaïa.<br />
-        25 exemplaires seulement.
-        <ul>
-          <li>ALL SALES ARE FINAL :)</li>
-          <li>1/2 WEEKS DELIVERY</li>
-          <li>No return & refund</li>
-        </ul>
+      <div class="options">
+        <label>CHOIX :</label><br>
+        <button class="option-btn active" onclick="selectPoster(0)">1</button>
+        <button class="option-btn" onclick="selectPoster(1)">2</button>
+      </div>
+      <div class="size">
+        <label>TAILLE :</label><br>
+        <button class="size-btn active">40x60cm</button>
+      </div>
+      <button class="buy-btn" onclick="location.href='https://buy.stripe.com/cNi6oJ7HZ8a24Lhat038402'">Buy now – 25€</button>
+      <div class="note">
+        Poster artistique – édition exclusive signée Studio Hikaïa. 25 exemplaires seulement.<br><br>
+        • ALL SALES ARE FINAL :)<br>
+        • 1/2 WEEKS DELIVERY<br>
+        • No return & refund
       </div>
     </div>
   </div>
-
   <script>
     const images = document.querySelectorAll('.carousel img');
     let currentIndex = 0;
 
     function showImage(index) {
-      images.forEach((img, i) => {
-        img.classList.toggle('active', i === index);
-      });
+      images.forEach(img => img.classList.remove('active'));
+      images[index].classList.add('active');
+    }
+
+    function prevImage() {
+      currentIndex = (currentIndex - 1 + images.length) % images.length;
+      showImage(currentIndex);
     }
 
     function nextImage() {
@@ -240,9 +194,12 @@
       showImage(currentIndex);
     }
 
-    function prevImage() {
-      currentIndex = (currentIndex - 1 + images.length) % images.length;
+    function selectPoster(index) {
+      currentIndex = index;
       showImage(currentIndex);
+      document.querySelectorAll('.option-btn').forEach((btn, i) => {
+        btn.classList.toggle('active', i === index);
+      });
     }
   </script>
 </body>
