--- a/boutique.html
+++ b/boutique.html
@@ -41,6 +41,7 @@
       align-items: center;
       justify-content: space-between;
       flex-wrap: wrap;
+      position: relative;
     }
     .menu {
       display: flex;
@@ -56,11 +57,26 @@
     .logo {
       width: 40px;
       height: 40px;
-      margin: 0 auto;
-      display: block;
       position: absolute;
       left: 50%;
       transform: translateX(-50%);
+    }
+    @media (max-width: 600px) {
+      header {
+        flex-direction: column;
+        align-items: center;
+        padding-top: 100px;
+      }
+      .menu {
+        justify-content: center;
+        margin-top: 10px;
+      }
+      .logo {
+        position: relative;
+        left: auto;
+        transform: none;
+        margin-top: -70px;
+      }
     }
     .container {
       display: flex;
@@ -138,7 +154,7 @@
       border-radius: 50%;
     }
     .price-label {
-      font-size: 18px;
+      font-size: 24px;
       margin-bottom: 15px;
       font-weight: 600;
     }
@@ -159,7 +175,7 @@
       border-color: white;
     }
     .buy-btn {
-      margin-top: 20px;
+      margin-top: 10px;
       padding: 16px 40px;
       background-color: white;
       color: black;
