--- a/boutique.html
+++ b/boutique.html
@@ -4,12 +4,90 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Boutique – Studio Hikaïa</title>
-  <link rel="stylesheet" href="styles.css">
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      background-color: black;
+      color: white;
+      font-family: Helvetica, Arial, sans-serif;
+    }
+    header {
+      text-align: center;
+      padding: 30px 0 10px;
+    }
+    .logo-container img {
+      height: 60px;
+    }
+    .scrolling-text {
+      width: 100%;
+      overflow: hidden;
+      white-space: nowrap;
+      box-sizing: border-box;
+      border-top: 1px solid white;
+      border-bottom: 1px solid white;
+      padding: 10px 0;
+    }
+    .scrolling-text p {
+      display: inline-block;
+      animation: scroll-left 20s linear infinite;
+      font-size: 14px;
+      letter-spacing: 2px;
+    }
+    @keyframes scroll-left {
+      0% { transform: translateX(100%); }
+      100% { transform: translateX(-100%); }
+    }
+    .product-grid {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 40px;
+      padding: 60px 20px;
+    }
+    .product {
+      width: 280px;
+      text-align: center;
+    }
+    .product img {
+      width: 100%;
+      border-radius: 10px;
+      margin-bottom: 10px;
+    }
+    .product h2 {
+      font-size: 16px;
+      margin: 10px 0 5px;
+      font-weight: normal;
+    }
+    .product p {
+      font-size: 14px;
+      margin-bottom: 10px;
+    }
+    .buy-btn {
+      display: inline-block;
+      padding: 10px 18px;
+      background-color: white;
+      color: black;
+      text-decoration: none;
+      font-weight: bold;
+      border-radius: 4px;
+      transition: 0.3s ease;
+    }
+    .buy-btn:hover {
+      background-color: grey;
+      color: white;
+    }
+    @media (max-width: 600px) {
+      .product {
+        width: 90%;
+      }
+    }
+  </style>
 </head>
 <body>
   <header>
     <div class="logo-container">
-      <a href="index.html"><img src="assets/logo-hikaia.png" alt="Logo Hikaïa" class="logo"></a>
+      <a href="index.html"><img src="assets/logo-hikaia.png" alt="Logo Hikaïa"></a>
     </div>
     <div class="scrolling-text">
       <p>
@@ -47,9 +125,5 @@
       <a href="#" class="buy-btn">À venir</a>
     </div>
   </main>
-
-  <footer>
-    <!-- Footer vide pour l’instant -->
-  </footer>
 </body>
 </html>
