--- a/boutique.html
+++ b/boutique.html
@@ -39,20 +39,28 @@
       100% { transform: translateX(-100%); }
     }
     .product-grid {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 40px;
-      padding: 60px 20px;
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 60px;
+      padding: 60px;
+      max-width: 1200px;
+      margin: auto;
     }
     .product {
-      width: 280px;
       text-align: center;
+    }
+    .product a {
+      text-decoration: none;
+      color: white;
     }
     .product img {
       width: 100%;
       border-radius: 10px;
       margin-bottom: 10px;
+      transition: transform 0.3s ease;
+    }
+    .product img:hover {
+      transform: scale(1.05);
     }
     .product h2 {
       font-size: 16px;
@@ -63,23 +71,9 @@
       font-size: 14px;
       margin-bottom: 10px;
     }
-    .buy-btn {
-      display: inline-block;
-      padding: 10px 18px;
-      background-color: white;
-      color: black;
-      text-decoration: none;
-      font-weight: bold;
-      border-radius: 4px;
-      transition: 0.3s ease;
-    }
-    .buy-btn:hover {
-      background-color: grey;
-      color: white;
-    }
     @media (max-width: 600px) {
-      .product {
-        width: 90%;
+      .product-grid {
+        padding: 30px 20px;
       }
     }
   </style>
@@ -98,31 +92,35 @@
 
   <main class="product-grid">
     <div class="product">
-      <img src="assets/poster-mbk.jpg" alt="Poster MBK">
-      <h2>Poster MBK</h2>
-      <p>25€</p>
-      <a href="https://buy.stripe.com/cNi6oJ7HZ8a24Lhat038402" class="buy-btn">Acheter</a>
+      <a href="poster.html">
+        <img src="assets/poster-mbk.jpg" alt="Poster MBK">
+        <h2>Poster MBK</h2>
+        <p>25€</p>
+      </a>
     </div>
 
     <div class="product">
-      <img src="assets/magazine.jpg" alt="Magazine">
-      <h2>Magazine</h2>
-      <p>Bientôt disponible</p>
-      <a href="#" class="buy-btn">À venir</a>
+      <a href="magazine.html">
+        <img src="assets/magazine.jpg" alt="Magazine">
+        <h2>Magazine</h2>
+        <p>Bientôt disponible</p>
+      </a>
     </div>
 
     <div class="product">
-      <img src="assets/babytee.jpg" alt="Baby Tee">
-      <h2>Baby Tee</h2>
-      <p>Bientôt disponible</p>
-      <a href="#" class="buy-btn">À venir</a>
+      <a href="babytee.html">
+        <img src="assets/babytee.jpg" alt="Baby Tee">
+        <h2>Baby Tee</h2>
+        <p>Bientôt disponible</p>
+      </a>
     </div>
 
     <div class="product">
-      <img src="assets/tee-shirt.jpg" alt="Tee-shirt Classique">
-      <h2>Tee-shirt Classique</h2>
-      <p>Bientôt disponible</p>
-      <a href="#" class="buy-btn">À venir</a>
+      <a href="teeshirt.html">
+        <img src="assets/tee-shirt.jpg" alt="Tee-shirt Classique">
+        <h2>Tee-shirt Classique</h2>
+        <p>Bientôt disponible</p>
+      </a>
     </div>
   </main>
 </body>
