--- a/contact.html
+++ b/contact.html
@@ -95,12 +95,13 @@
       margin-bottom: 30px;
     }
     .contact-container p {
-      font-size: 16px;
-      margin: 10px 0;
+      font-size: 24px;
+      margin: 20px 0;
     }
     .contact-container a {
       color: #fff;
       text-decoration: underline;
+      font-weight: bold;
     }
   </style>
 </head>
